# feada-emp

./: README.md  install.py
emp-ag2pc/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile  install_manifest.txt
emp-ag2pc/test/: 2pc.cpp  CMakeLists.txt  CTestTestfile.cmake  GFMult128.cpp  KDF_384.cpp  KDF_448.cpp  Makefile  add2xor-p256.cpp  add2xor.cpp  addition.cpp  aes-gcm-2pc.cpp  aes-gcm-dec-2pc.cpp  aes_gcm_dec.cpp  aes_gcm_dec_record.cpp  aes_gcm_dec_sf.cpp  aes_gcm_enc.cpp  aes_gcm_enc_cf.cpp  aes_gcm_enc_record.cpp  cmake_install.cmake  condition.cpp  hex2Int.cpp  innerproduct.cpp  input_test.cpp  p256-ectf.cpp  plaintext_sha256.h  predicate-aes-gcm-2pc.cpp  predicate_aes_gcm_enc_record.cpp  sha256.cpp  sha256_output_two.cpp  sha256_with_state.cpp.backup  single_execution.h  test_aes.cpp  test_prf_96.cpp  tls-prf-320-2-shares.cpp  tls-prf-320-shares.cpp  tls-prf-320.cpp  tls-prf-384.cpp  tls-prf-96-sf.cpp  tls-prf-96.cpp  xor.cpp
emp-ag2pc/test/aes128/: aes128e.h  aes128gcm.h
emp-ot/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile  install_manifest.txt
emp-ot/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  ectf.cpp  p256-ectf.cpp
emp-sh2pc/: CMakeCache.txt  CTestTestfile.cmake  Makefile  batch_generate_circuit  cmake_install.cmake  compile  install_manifest.txt
emp-sh2pc/test/: CMakeLists.txt  CTestTestfile.cmake  GFMult128.cpp  Makefile  MtA_1.cpp  add2xor.cpp  aes.cpp  aes_gcm.cpp  aes_gcm_dec.cpp  cmake_install.cmake  condition.cpp  dec_ghash.cpp  enc_ghash.cpp  hex2Int.cpp  innerproduct.cpp  input_test.cpp  predicate_aes_gcm.cpp  predicate_enc_ghash.cpp  predicate_ghash.cpp  relu.cpp  sha-256.cpp  sha256_i_2_share_msg_1_state_o_hash_state.cpp  sha256_i_2_share_msg_2_mask_1_state_o_2_share.cpp  sha256_input_two_state.cpp  sha256_input_two_state_trunc.cpp  sha256_input_two_state_trunc_320.cpp  sha256_input_two_state_trunc_96.cpp  sha256_input_two_state_trunc_wo_hash.cpp  sha256_padded.cpp  sha256_with_state.cpp  test_aes_gcm.cpp  xor.cpp
emp-tool/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
emp-tool/emp-tool/circuits/files/bristol_format/: check_AND_gates.py  condition.txt  hex2int.txt  innerproduct.txt  input_test.txt  input_test_2.txt  input_test_3.txt  sha256_output_state.txt.back  sha256_output_two_copy.txt  sha256_with_input_state.txt  sha256_with_state.txt  xor copy.txt  xor_32.txt  xor_384.txt
emp-tool/emp-tool/circuits/files/bristol_format/AES/: GFMult128.txt  GFMult128_.txt  aes_2pc.txt
emp-tool/emp-tool/circuits/files/bristol_format/ECtF/: add_.txt  add_2_xor.txt  add_2_xor_p256.txt  add_2_xor_p256.txt.backup
emp-tool/emp-tool/circuits/files/bristol_format/KDF/: sha256_i_2_share_msg_1_state_o_hash_state.txt  sha256_i_2_share_msg_2_mask_1_state_o_2_share.txt  sha256_i_2_share_msg_2_mask_1_state_o_2_share_addition.txt  sha256_i_2_share_state_1_msg_o_hash.txt  sha256_i_2_share_state_2_full_msg_o_2_share_96.txt
emp-tool/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
