#Testing macro
macro (add_test_executable_with_lib _name libs)
	add_executable(test_${_name} "${_name}.cpp")
	target_link_libraries(test_${_name} ${EMP-OT_LIBRARIES})
endmacro()

macro (add_test_case _name)
	add_test_executable_with_lib(${_name} "")
  	add_test(NAME ${_name} COMMAND "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/test_${_name}" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/")
endmacro()

macro (add_test_case_with_run _name)
	add_test_executable_with_lib(${_name} "")
	add_test(NAME ${_name} COMMAND "./run" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/test_${_name}" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/")

endmacro()

# Test cases
add_test_case_with_run(aes)
add_test_case_with_run(sha1)
add_test_case_with_run(sha256)
add_test_case_with_run(simple_circuit)
add_test_case_with_run(abit)
add_test_case_with_run(triple)
add_test_case_with_run(amortized_2pc)
add_test_case_with_run(aes_mult_inputs)
add_test_case_with_run(KDF_384)
add_test_case_with_run(KDF_448)
add_test_case_with_run(sha256_output_two)
add_test_case_with_run(innerproduct)  
add_test_case_with_run(xor)
add_test_case_with_run(addition)
add_test_case_with_run(condition)
add_test_case_with_run(GFMult128)
add_test_case_with_run(aes_gcm_enc)
add_test_case_with_run(aes_gcm_dec)
add_test_case_with_run(aes_gcm_enc_record)
add_test_case_with_run(predicate_aes_gcm_enc_record)
add_test_case_with_run(aes_gcm_dec_record)
add_test_case_with_run(aes_gcm_enc_cf)
add_test_case_with_run(aes_gcm_dec_sf)
add_test_case_with_run(input_test)
add_test_case_with_run(add2xor)
add_test_case_with_run(add2xor-p256)
add_test_case_with_run(p256-ectf)
add_test_case_with_run(tls-prf-384)
add_test_case_with_run(tls-prf-320)
add_test_case_with_run(tls-prf-320-shares)
add_test_case_with_run(tls-prf-320-2-shares)
add_test_case_with_run(tls-prf-96)
add_test_case_with_run(tls-prf-96-sf)
add_test_case_with_run(test_prf_96)
add_test_case_with_run(test_aes)
add_test_case_with_run(aes-gcm-2pc)
add_test_case_with_run(aes-gcm-dec-2pc)
add_test_case_with_run(predicate-aes-gcm-2pc)
